--- a/sections/obis/obisFish_en.Rmd
+++ b/sections/obis/obisFish_en.Rmd
@@ -36,7 +36,7 @@ load_rdata(c("gbifFish_rr"), regionStr, env = environment())
 write_meta(gbifFish_rr, "EN")
 ```
 
-GBIS is an international network and data infrastructure funded by the world's governments and aimed at providing anyone, anywhere, open access to data about all types of life on Earth (GBIF, 2021). Similar to OBIS, GBIF accepts data from various contributors such as university laboratories, government departments or private research institutions, although GBIF accepts both marine and terrestrial species data. As of December 2021, GBIF has over 1.9 billion species occurrence records and over 63,000 datasets globally. 
+GBIF is an international network and data infrastructure funded by the world's governments and aimed at providing anyone, anywhere, open access to data about all types of life on Earth (GBIF, 2021). Similar to OBIS, GBIF accepts data from various contributors such as university laboratories, government departments or private research institutions, although GBIF accepts both marine and terrestrial species data. As of December 2021, GBIF has over 1.9 billion species occurrence records and over 63,000 datasets globally. 
 
 ```{r child = here::here("sections/obis/obisCommon_en.Rmd")}
 
@@ -61,15 +61,15 @@ Report_obis<-noquote(Report_obis)
 writeLines(Report_obis)
 ```
 
-```{r obis-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(obisFish_rr, "EN"), 'Map showing the search area defined by the user (red outline) was used to query information from Ocean Biodiversity Information System (OBIS) observation records, for species contained within the search area and listed by the <i>Species at Risk Act</i> (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Sightings on land are an indicator that the sighting data have not yet been completely error-checked or that animals were sighted from shore. Observations displayed outside of the search area are visualized for context, but not included in the survey results listed below. The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.')}
+```{r obis-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(obisFish_rr, "EN"), 'Map of Ocean Biodiversity Information System (OBIS) observation records (black circles) of fish or invertebrate species observed within the search area (red outline) and listed by the Species at Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Species designated as “Not at Risk” by SARA or COSEWIC are not included in this search. Observations displayed outside of the search area are visualized for context, but not included in the survey results listed below. The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.')}
 if (!is.null(outputList$studyData)) {
   plot_rr_sf(areaMap, outputList$mapData)
 }
 ```
 
-```{r obis-table, echo=FALSE, results='asis', caption="Priority species with observations contained in the OBIS database within the search polygon area."}
+```{r obis-table, echo=FALSE, results='asis'}
 if (!is.null(outputList$studyData)) {
-  knitr::kable(obisTable, align="l", caption=paste(write_caption_blurb(obisFish_rr, "EN"), "Ocean Biodiversity Information System (OBIS) observation records of species contained within the search area and listed by the <i>Species At Risk Act</i> (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). <b>The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>"), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+  knitr::kable(obisTable, align="l", caption=paste(write_caption_blurb(obisFish_rr, "EN"), "Ocean Biodiversity Information System (OBIS) observation records of fish and invertebrate species observed within the search area, and listed by the Species At Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Species designated as “Not at Risk” by SARA or COSEWIC are not included in this search. URLs contain links to a complete dataset description. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area."), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 }
 ```
 
@@ -81,12 +81,7 @@ inaturalist_sf = subset(gbifFish_rr$data_sf, title == "iNaturalist Research-grad
 inaturalistClipped <- master_intersect(inaturalist_sf, mapDataList)
 inaturalistTable <- create_sar_tables(inaturalistClipped$studyData, listed_species, extraCols = c("url", "citation"))$sarData
 
-machineObs_sf = subset(gbifFish_rr$data_sf, basisOfRecord == "MACHINE_OBSERVATION")
-machineObsClipped <- master_intersect(machineObs_sf, mapDataList)
-machineObsTable <- create_sar_tables(machineObsClipped$studyData, listed_species, extraCols = c("url", "citation"))$sarData
-
-otherGbif_sf = subset(gbifFish_rr$data_sf, title != "iNaturalist Research-grade Observations" 
-                      & basisOfRecord != "MACHINE_OBSERVATION")
+otherGbif_sf = subset(gbifFish_rr$data_sf, title != "iNaturalist Research-grade Observations")
 gbifClipped <- master_intersect(otherGbif_sf, mapDataList)
 gbifTable <- create_sar_tables(gbifClipped$studyData, listed_species, extraCols = c("url", "citation"))$sarData
 
@@ -97,7 +92,7 @@ gbifTable <- create_sar_tables(gbifClipped$studyData, listed_species, extraCols 
 
 ```{r gbif-check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
 reportGbif <-  if (is.null(gbifClipped$studyData)) {
-  "*	There are relevant records in the Global Biodiversity Information Facility (GBIF) for this search area."
+  "*	There are no relevant records in the Global Biodiversity Information Facility (GBIF) for this search area."
 } else if (is.null(inaturalistClipped$studyData)){
   "*	There are relevant records in the Global Biodiversity Information Facility (GBIF) for this search area."
 } else {
@@ -106,15 +101,15 @@ reportGbif <-  if (is.null(gbifClipped$studyData)) {
 writeLines(reportGbif)
 ```
 
-```{r gbif-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(gbifFish_rr, "EN"), 'Global Biodiversity Information Facility (GBIF)  observation records (black circles) of fish or invertebrate species observed within the search area (red outline) and listed by the Species at Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Observations displayed outside of the search area are visualized for context, but not included in the survey results listed below. The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.')}
+```{r gbif-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(gbifFish_rr, "EN"), 'Species designated as “Not at Risk” by SARA or COSEWIC are not included in this search. Observations displayed outside of the search area are visualized for context, but not included in the survey results listed below. The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.')}
 if (!is.null(gbifClipped$studyData)) {
   plot_rr_sf(areaMap, gbifClipped$mapData, attribute=gbifFish_rr$attribute)
 }
 ```
 
-```{r gbif-table, echo=FALSE, results='asis', caption="Priority species with observations contained in the OBIS database within the search polygon area."}
+```{r gbif-table, echo=FALSE, results='asis'}
 if (!is.null(gbifClipped$studyData)) {
-  knitr::kable(gbifTable, align="l", caption=paste(write_caption_blurb(gbifFish_rr, "EN"), "Global Biodiversity Information Facility (GBIF) observation records of fish and invertebrate species observed within the search area, and listed by the Species At Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). URLs contain links to a complete dataset description. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area."), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+  knitr::kable(gbifTable, align="l", caption=paste(write_caption_blurb(gbifFish_rr, "EN"), "Global Biodiversity Information Facility (GBIF) observation records of fish and invertebrate species observed within the search area, and listed by the Species At Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Species designated as “Not at Risk” by SARA or COSEWIC are not included in this search. URLs contain links to a complete dataset description. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. "), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 }
 ```
 
@@ -124,21 +119,9 @@ if (!is.null(inaturalistClipped$studyData)) {
 }
 ```
 
-```{r inaturalist-table, echo=FALSE, results='asis', caption="Priority species with observations contained in the OBIS database within the search polygon area."}
+```{r inaturalist-table, echo=FALSE, results='asis'}
 if (!is.null(inaturalistClipped$studyData)) {
-  knitr::kable(inaturalistTable, align="l", caption=paste(write_caption_blurb(gbifFish_rr, "EN"), "Research-grade iNaturalist observations of fish and invertebrates within the search area and listed by the Species At Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). URLs contain links to a complete dataset description. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area."), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
-}
-```
-
-```{r machineObs-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(gbifFish_rr, "EN"), 'Observations made by Machines within the search area (red outline) of fish or invertebrate species that have been added to the Global Biodiversity Information Facility (GBIF). Species included have been listed by the Species at Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Observations displayed outside of the search area are visualized for context, but not included in the survey results listed below. Observations are coloured to show coordinate uncertainties of the data, where observations with coordinate uncertainties >20 km represent locations that have been obscured due to geoprivacy concerns (e.g., hunting). NAs refer to observations with no provided coordinate uncertainty. The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. ')}
-if (!is.null(machineObsClipped$studyData)) {
-  plot_rr_sf(areaMap, machineObsClipped$mapData, attribute=gbifFish_rr$attribute)
-}
-```
-
-```{r machineObs-table, echo=FALSE, results='asis', caption="Priority species with observations contained in the OBIS database within the search polygon area."}
-if (!is.null(machineObsClipped$studyData)) {
-  knitr::kable(machineObsTable, align="l", caption=paste(write_caption_blurb(gbifFish_rr, "EN"), "Observations made by Machines of fish and invertebrates within the search area and listed by the Species At Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). URLs contain links to a complete dataset description. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area."), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+  knitr::kable(inaturalistTable, align="l", caption=paste(write_caption_blurb(gbifFish_rr, "EN"), "Research-grade iNaturalist observations within the search area (red outline) of fish or invertebrate species that have been added to the Global Biodiversity Information Facility (GBIF). Species included have been listed by the Species at Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Species designated as “Not at Risk” by SARA or COSEWIC are not included in this search. Observations displayed outside of the search area are visualized for context, but not included in the survey results listed below. Observations are coloured to show coordinate uncertainties of the data, where observations with coordinate uncertainties >20 km represent locations that have been obscured due to geoprivacy concerns (e.g., hunting). NAs refer to observations with no provided coordinate uncertainty. The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area."), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 }
 ```
 
