--- a/sections/obis/obisCet_en.Rmd
+++ b/sections/obis/obisCet_en.Rmd
@@ -16,38 +16,27 @@ if (FALSE) { #load in data:
 ```{r child = here::here("sections/commonSections/commonCet.Rmd")}
 ```
 
-### **Ocean Biodiversity Information System (OBIS) [for cetaceans]** {#obis-cetacean-section}
 
-```{r obis-cetacean-load, include=FALSE}
-load_rdata(c("obisCet_rr"), regionStr, env = environment())
+```{r obis-gbif-cet-load, include=FALSE}
+load_rdata(c("obisCet_rr", "gbifCet_rr"), regionStr, env = environment())
+
 ```
 
-```{r obis-cetacean-meta, results='asis'}
-write_meta(obisCet_rr, "EN")
+```{r cet-short-obis, results = 'asis', eval=exists('commonObis')}
+cat('### **Ocean Biodiversity Information System and Global Biodiversity Information Facility** \n\n To avoid duplication of text, please refer to the overview for OBIS and GBIF provided in the Fish and Invertebrates section. ')
 ```
 
-OBIS is a global, open-access data and information clearing-house on marine biodiversity for science, conservation, and sustainable development [@OBIS]. Their vision is to build and maintain a global alliance that collaborates with scientific communities to facilitate free and open-access to, and application of, biodiversity and biogeographic data and information on marine life. OBIS accepts data from any organization, consortium, project or individual who wishes to contribute data (OBIS, 2021). As of December 2021, OBIS has over 80 million species occurrence records and over 4,300 datasets globally.
-
-
-### **Global Biodiversity Information Facility (GBIF)** {#gbif-fish-section}
-
-```{r gbif-cetacean-load, include=FALSE}
-load_rdata(c("gbifCet_rr"), regionStr, env = environment())
+```{r child = here::here("sections/obis/obisCommon_en.Rmd"), eval=!exists('commonObis')}
+# chunk will only run if commonObis variable does not exist.
+assign('commonObis', TRUE, envir = globalenv())
 ```
-
-```{r gbif-cetacean-meta, results='asis'}
-write_meta(gbifCet_rr, "EN")
-```
-
-GBIF is an international network and data infrastructure funded by the world's governments and aimed at providing anyone, anywhere, open access to data about all types of life on Earth (GBIF, 2021). Similar to OBIS, GBIF accepts data from various contributors such as university laboratories, government departments or private research institutions, although GBIF accepts both marine and terrestrial species data. As of December 2021, GBIF has over 1.9 billion species occurrence records and over 63,000 datasets globally. 
-
 
 #### ***Area-specific OBIS cetacean search results***
 
 ```{r obis-cetecean, cache=FALSE, include=FALSE}
 obisClipped <- master_intersect(obisCet_rr$data_sf, mapDataList)
 
-obisTable <- create_sar_tables(obisClipped$studyData, listed_species, extraCols = c("url", "citation"))$sarData
+obisTable <- create_sar_tables(obisClipped$studyData, listed_species, extraCols = c("URL", "Citation"))$sarData
 
 linkedSectionText <- "[OBIS-Cetaceans](##obis-cetacean-section)"
 if (!is.null(obisClipped$studyData)) {
@@ -56,7 +45,6 @@ if (!is.null(obisClipped$studyData)) {
 } else {
  summarySarTable <- add_col_to_sar_summary(summarySarTable, linkedSectionText, NULL, "specIndex", linkedSectionText)
 }
-
 
 ```
 
@@ -86,12 +74,12 @@ if (!is.null(obisClipped$studyData)) {
 ```{r gbif-cetacean-results, cache=FALSE, include=FALSE}
 inaturalist_sf = subset(gbifCet_rr$data_sf, title == "iNaturalist Research-grade Observations")
 inaturalistClipped <- master_intersect(inaturalist_sf, mapDataList)
-inaturalistTable <- create_sar_tables(inaturalistClipped$studyData, listed_species, extraCols = c("url", "citation"))$sarData
+inaturalistTable <- create_sar_tables(inaturalistClipped$studyData, listed_species, extraCols = c("URL", "Citation"))$sarData
 
 
 otherGbif_sf = subset(gbifCet_rr$data_sf, title != "iNaturalist Research-grade Observations")
 gbifClipped <- master_intersect(otherGbif_sf, mapDataList)
-gbifTable <- create_sar_tables(gbifClipped$studyData, listed_species, extraCols = c("url", "citation"))$sarData
+gbifTable <- create_sar_tables(gbifClipped$studyData, listed_species, extraCols = c("URL", "Citation"))$sarData
 # Add to summary tables!
 
 ```
@@ -109,7 +97,7 @@ writeLines(reportGbif)
 
 ```{r gbif-cetacean-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(gbifCet_rr, "EN"), 'Map of Global Biodiversity Information Facility (GBIF) observation records of cetaceans observed within the search area (red outline), and listed by the Species at Risk Act (SARA) and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Species designated as “Not at Risk” by SARA or COSEWIC are not included in this search. Observations displayed outside of the search area are visualized for context, but not included in the survey results listed below. Coloured circles indicate individual observations for each whale species. The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. Absence may be related to low or no survey effort. Sightings information is known to under-represent the presence of cetaceans, particularly deep diving species (e.g., beaked whales) that spend little time at the surface. This map also does not include acoustic detections.  Sightings near shore (< 300 m from the coastline) are an indicator that the sighting data have not yet been completely error-checked or that animals were sighted from shore. Observations ≥ 300 m from shore were removed due to positional accuracy and species identification concerns. ')}
 if (!is.null(gbifClipped$studyData)) {
-  plot_rr_sf(areaMap, gbifClipped$mapData, attribute=gbifCet_rr$attribute)
+  plot_rr_sf(areaMap, gbifClipped$mapData, attribute=gbifCet_rr$attribute, colorMap = whaleCol, shapeMap = whaleShape)
 }
 ```
 
@@ -120,7 +108,7 @@ if (!is.null(gbifClipped$studyData)) {
 ```
 ```{r inaturalist-cetaceans-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(gbifCet_rr, "EN"), 'Research-grade iNaturalist observations within the search area (red outline) of cetacean species that have been added to the Global Biodiversity Information Facility (GBIF). Species included have been listed by the Species at Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Species designated as “Not at Risk” by SARA or COSEWIC are not included in this search. Observations displayed outside of the search area are visualized for context, but not included in the survey results listed below. Observations are coloured to show coordinate uncertainties of the data, where observations with coordinate uncertainties >20 km represent locations that have been obscured due to geoprivacy concerns (e.g., hunting). NAs refer to observations with no provided coordinate uncertainty. The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.')}
 if (!is.null(inaturalistClipped$studyData)) {
-  plot_rr_sf(areaMap, inaturalistClipped$mapData, attribute=gbifCet_rr$attribute)
+  plot_rr_sf(areaMap, inaturalistClipped$mapData, attribute=gbifCet_rr$attribute, colorMap = whaleCol, shapeMap = whaleShape)
 }
 ```
 
