--- a/sections/commonSections/commonIntro.Rmd
+++ b/sections/commonSections/commonIntro.Rmd
@@ -18,8 +18,8 @@ if (!exists("mapDataList")){
   studyArea <- sf::st_read(here::here("app/output/geoms_slc.geojson")) # last area from app.
   intro_setup(studyArea, env = environment(), regionStr=regionStr)
   # need to clear this global env variable here.
-  if (exists("commonObis")) { 
-    rm("commonObis")
+  if (exists("commonObis", envir=globalenv())) { 
+    rm("commonObis", envir=globalenv())
   }
 }
 ```
