--- a/sections/obis/obisCet_fr.Rmd
+++ b/sections/obis/obisCet_fr.Rmd
@@ -16,21 +16,26 @@ if (FALSE) { #load in data:
 ```{r child = here::here("sections/commonSections/commonCet.Rmd")}
 ```
 
-### **Système d’information sur la biodiversité des océans (SIBO) [pour les cétacés]**  {#obis-cetacean-section}
+```{r obis-gbif-cet-load, include=FALSE}
+load_rdata(c("obisCet_rr", "gbifCet_rr"), regionStr, env = environment())
 
-```{r obis-cetacean-load, include=FALSE}
-load_rdata(c("obisCet_rr"), regionStr, env = environment())
 ```
 
-```{r obis-cetacean-meta, results='asis'}
-write_meta(obisCet_rr, "FR")
+```{r cet-short-obis, results = 'asis', eval=exists('commonObis')}
+cat('### **Ocean Biodiversity Information System and Global Biodiversity Information Facility** \n\n To avoid duplication of text, please refer to the overview for OBIS and GBIF provided in the Fish and Invertebrates section: [OBIS section](#OBIS-section). ')
 ```
 
-Une recherche du SIBO a été effectuée pour trouver d’autres documents pertinents pour les cétacés inscrits en vertu de la LEP, ou évalués par le COSEPAC. Un processus de CQ de premier niveau a été effectué en supprimant les rapports en double qui sont également présents dans la BDOB. Les versions subséquentes de ce rapport viseront à étendre nos efforts de CQ pour cette source d’information.
+```{r child = here::here("sections/obis/obisCommon_fr.Rmd"), eval=!exists('commonObis')}
+# chunk will only run if commonObis variable does not exist, set in commonObis.rmd.
+```
 
 #### ***Résultats de la recherche du SIBO pour les cétacés, par zone***
-```{r obis-cetacean, include=FALSE, cache=FALSE}
+
+```{r obis-cetecean, cache=FALSE, include=FALSE}
 obisClipped <- master_intersect(obisCet_rr$data_sf, mapDataList)
+
+obisTable <- create_sar_tables(obisClipped$studyData, listed_species, extraCols = c("URL", "Citation"))$sarData
+
 linkedSectionText <- "[OBIS-Cetaceans](##obis-cetacean-section)"
 if (!is.null(obisClipped$studyData)) {
   whaleSummaryTable <- add_col_to_whale_summary(whaleSummaryTable, linkedSectionText, obisClipped$studyData, obisCet_rr$attribute)
@@ -40,18 +45,73 @@ if (!is.null(obisClipped$studyData)) {
 }
 
 ```
-*
-```{r obis-cetacean-result, comment="", prompt=TRUE, echo=FALSE, results='asis'}
+
+```{r obis-cetecean-result, comment="", prompt=TRUE, echo=FALSE, results='asis'}
 Report_obis_cet <-  if (is.null(obisClipped$studyData)) {
-  "Il n’existe aucun registre pertinent pour les cétacés dans le système d’information sur la biodiversité des océans (SIBO) pour cette zone de recherche."
+  "* There are no relevant records of cetaceans in the Ocean Biodiversity Information System (OBIS) for this search area."
 } else {
-  "Il existe des registres pertinents pour les cétacés dans le système d’information sur la biodiversité des océans (SIBO) pour cette zone de recherche."
+  "* There are relevant records of cetaceans in the Ocean Biodiversity Information System (OBIS) for this search area."
 }
 writeLines(Report_obis_cet)
 ```
-
-```{r obis-cetacean-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(obisCet_rr, "FR"), 'Carte montrant la zone de recherche définie par l’utilisateur (entourée de rouge). La carte affiche des renseignements tirés du SIBO pour les espèces de cétacés dans la zone de recherche et inscrites en vertu de la <i>Loi sur les espèces en péril</i> (LEP) ou évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC). <b>Si une espèce est absente de cette carte, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b> . L’absence peut être liée à un effort d’enquête faible ou nul. L’information sur les observations sous-représente la présence de cétacés, en particulier les espèces qui vivent en eau profonde (p. ex., les baleines à bec) et qui passent peu de temps à la surface. Cette carte n’inclut pas non plus les détections acoustiques. Les observations sur terre indiquent que les données d’observation n’ont pas encore été complètement vérifiées ou que des animaux ont été observés depuis la côte.')}
+```{r obis-cetecean-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(obisCet_rr, "FR"), 'Map of Ocean Biodiversity Information System (OBIS) observation records of cetaceans observed within the search area (red outline), and listed by the Species at Risk Act (SARA) and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Species designated as “Not at Risk” by SARA or COSEWIC are not included in this search. Observations displayed outside of the search area are visualized for context, but not included in the survey results listed below. Coloured circles indicate individual observations for each whale species. The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. Absence may be related to low or no survey effort. Sightings information is known to under-represent the presence of cetaceans, particularly deep diving species (e.g., beaked whales) that spend little time at the surface. This map also does not include acoustic detections. Sightings near shore (< 300 m from the coastline) are an indicator that the sighting data have not yet been completely error-checked or that animals were sighted from shore. Observations ≥ 300 m from shore were removed due to positional accuracy and species identification concerns. ')}
 if (!is.null(obisClipped$studyData)) {
   plot_rr_sf(areaMap, obisClipped$mapData, attribute = obisCet_rr$attribute, colorMap = whaleCol, shapeMap = whaleShape)
+}
+```
+
+```{r obis-cetacean-table, echo=FALSE, results='asis'}
+if (!is.null(obisClipped$studyData)) {
+  knitr::kable(obisTable, align="l", caption=paste(write_caption_blurb(obisCet_rr, "FR"), "Ocean Biodiversity Information System (OBIS) observation records of cetacean species observed within the search area, and listed by the Species At Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Species designated as “Not at Risk” by SARA or COSEWIC are not included in this search. URLs contain links to a complete dataset description. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. Observations ≥ 300 m from shore were removed due to positional accuracy and species identification concerns."), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+}
+```
+
+
+#### ***Area-specific GBIF  search results***
+
+```{r gbif-cetacean-results, cache=FALSE, include=FALSE}
+inaturalist_sf = subset(gbifCet_rr$data_sf, title == "iNaturalist Research-grade Observations")
+inaturalistClipped <- master_intersect(inaturalist_sf, mapDataList)
+inaturalistTable <- create_sar_tables(inaturalistClipped$studyData, listed_species, extraCols = c("URL", "Citation"))$sarData
+
+
+otherGbif_sf = subset(gbifCet_rr$data_sf, title != "iNaturalist Research-grade Observations")
+gbifClipped <- master_intersect(otherGbif_sf, mapDataList)
+gbifTable <- create_sar_tables(gbifClipped$studyData, listed_species, extraCols = c("URL", "Citation"))$sarData
+# Add to summary tables!
+
+```
+
+```{r gbif-cetacean-check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
+reportGbif <-  if (is.null(gbifClipped$studyData)) {
+  "*	There are relevant records in the Global Biodiversity Information Facility (GBIF) for this search area."
+} else if (is.null(inaturalistClipped$studyData)){
+  "*	There are relevant records in the Global Biodiversity Information Facility (GBIF) for this search area."
+} else {
+  "*	There are relevant records in the Global Biodiversity Information Facility (GBIF) including iNaturalist entries for this search area."  
+}
+writeLines(reportGbif)
+```
+
+```{r gbif-cetacean-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(gbifCet_rr, "FR"), 'Map of Global Biodiversity Information Facility (GBIF) observation records of cetaceans observed within the search area (red outline), and listed by the Species at Risk Act (SARA) and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Species designated as “Not at Risk” by SARA or COSEWIC are not included in this search. Observations displayed outside of the search area are visualized for context, but not included in the survey results listed below. Coloured circles indicate individual observations for each whale species. The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. Absence may be related to low or no survey effort. Sightings information is known to under-represent the presence of cetaceans, particularly deep diving species (e.g., beaked whales) that spend little time at the surface. This map also does not include acoustic detections.  Sightings near shore (< 300 m from the coastline) are an indicator that the sighting data have not yet been completely error-checked or that animals were sighted from shore. Observations ≥ 300 m from shore were removed due to positional accuracy and species identification concerns. ')}
+if (!is.null(gbifClipped$studyData)) {
+  plot_rr_sf(areaMap, gbifClipped$mapData, attribute=gbifCet_rr$attribute, colorMap = whaleCol, shapeMap = whaleShape)
+}
+```
+
+```{r gbif-cetacean-table, echo=FALSE, results='asis'}
+if (!is.null(gbifClipped$studyData)) {
+  knitr::kable(gbifTable, align="l", caption=paste(write_caption_blurb(gbifCet_rr, "FR"), "Global Biodiversity Information Facility (GBIF) observation records of cetacean species observed within the search area, and listed by the Species At Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Species designated as “Not at Risk” by SARA or COSEWIC are not included in this search. URLs contain links to a complete dataset description. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. Observations ≥ 300 m from shore were removed due to positional accuracy and species identification concerns. "), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+}
+```
+```{r inaturalist-cetaceans-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(gbifCet_rr, "FR"), 'Research-grade iNaturalist observations within the search area (red outline) of cetacean species that have been added to the Global Biodiversity Information Facility (GBIF). Species included have been listed by the Species at Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Species designated as “Not at Risk” by SARA or COSEWIC are not included in this search. Observations displayed outside of the search area are visualized for context, but not included in the survey results listed below. Observations are coloured to show coordinate uncertainties of the data, where observations with coordinate uncertainties >20 km represent locations that have been obscured due to geoprivacy concerns (e.g., hunting). NAs refer to observations with no provided coordinate uncertainty. The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.')}
+if (!is.null(inaturalistClipped$studyData)) {
+  plot_rr_sf(areaMap, inaturalistClipped$mapData, attribute=gbifCet_rr$attribute, colorMap = whaleCol, shapeMap = whaleShape)
+}
+```
+
+```{r inaturalist-cetaceans-table, echo=FALSE, results='asis'}
+if (!is.null(inaturalistClipped$studyData)) {
+  knitr::kable(inaturalistTable, align="l", caption=paste(write_caption_blurb(gbifCet_rr, "FR"), "Research-grade iNaturalist observations of cetaceans within the search area and listed by the Species At Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). URLs contain links to a complete dataset description. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area."), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 }
 ```
