--- a/sections/obis/obisFish_fr.Rmd
+++ b/sections/obis/obisFish_fr.Rmd
@@ -13,44 +13,93 @@ if (FALSE) { #load in data:
 }
 ```
 
-### **Système d’information sur la biodiversité des océans (SIBO)**  
-
-```{r obis-load, include=FALSE}
-load_rdata(c("obisFish_rr"), "MAR", env = environment())
+```{r obis-gbif-load, include=FALSE}
+load_rdata(c("obisFish_rr", "gbifFish_rr"), regionStr, env = environment())
 ```
 
-```{r obis-meta, results='asis'}
-write_meta(obisFish_rr, "FR")
+```{r child = here::here("sections/obis/obisCommon_fr.Rmd"), eval=!exists('commonObis')}
+# chunk will only run if commonObis variable does not exist, set in common obis, removed in commonIntro.
 ```
-
-Le SIBO est un centre mondial de données et d’information en libre accès sur la biodiversité marine pour la science, la conservation et le développement durable. Il a pour vision de bâtir et de maintenir une alliance mondiale qui collabore avec les communautés scientifiques pour faciliter l’accès libre et ouvert à la biodiversité et aux données et informations biogéographiques sur la vie marine, ainsi que leur application. Des recherches du SIBO ont été effectuées pour trouver d’autres documents pertinents pour les espèces inscrites en vertu de la LEP ou évaluées par le COSEPAC. Les versions futures de cet outil de production de rapports viseront à élargir nos vérifications de la qualité de la base de données du SIBO.
 
 #### ***Résultats de recherche du SIBO sur les poissons et les invertébrés par zone***
 
 ```{r obis-results, include=FALSE, cache=FALSE}
 outputList <- master_intersect(obisFish_rr$data_sf, mapDataList, Year = minYear)
 
-obisTable <- create_sar_tables(outputList$studyData, listed_species, extraCols = c())$sarData
+obisTable <- create_sar_tables(outputList$studyData, listed_species, extraCols = c("URL", "Citation"))$sarData
 summarySarTable <- add_col_to_sar_summary(summarySarTable, "[OBIS](#OBIS-section)", obisTable, "Common Name", "Common Name")
 ```
-*
+
 ```{r obis-check, echo=FALSE, results='asis',}
 Report_obis <- if (is.null(outputList$studyData)) {
-  "Il n’y a aucun registre pertinent dans le système d’information sur la biodiversité des océans (SIB)O pour cette zone de recherche."
+  "* There are no relevant records in the Ocean Biodiversity Information System (OBIS) for this search area."
 } else {
-  "Il y a des registres pertinents dans le système d’information sur la biodiversité des océans (SIB)O pour cette zone de recherche."
+  "* There are relevant records in the Ocean Biodiversity Information System (OBIS) for this search area."
 }
 Report_obis<-noquote(Report_obis)
 writeLines(Report_obis)
 ```
-```{r obis-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(obisFish_rr, "FR"), ' Carte montrant la zone de recherche définie par l’utilisateur (entourée de rouge) a été utilisée pour rechercher des informations dans les registres d’observation du SIBO sur les espèces contenues dans la zone de recherche et inscrites en vertu de la <i>Loi sur les espèces en péril</i> (LEP) ou évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC). Les observations sur terre indiquent que les données d’observation n’ont pas encore été complètement vérifiées ou que des animaux ont été observés depuis la côte. <b>Si une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>')}
+
+```{r obis-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(obisFish_rr, "FR"), 'Map of Ocean Biodiversity Information System (OBIS) observation records (black circles) of fish or invertebrate species observed within the search area (red outline) and listed by the Species at Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Species designated as “Not at Risk” by SARA or COSEWIC are not included in this search. Observations displayed outside of the search area are visualized for context, but not included in the survey results listed below. The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.')}
 if (!is.null(outputList$studyData)) {
   plot_rr_sf(areaMap, outputList$mapData)
 }
 ```
 
-```{r obis-table, echo=FALSE, results='asis', caption="Les espèces prioritaires avec des observations contenues dans la base de données du SIBO, dans la zone de recherche."}
+```{r obis-table, echo=FALSE, results='asis'}
 if (!is.null(outputList$studyData)) {
-  knitr::kable(obisTable, align="l", caption="Niveau de qualité : Moyenne. Niveau de sécurité : Aucun. Registres d’observation du système d’information sur la biodiversité des océans (SIBO) des espèces contenues dans la zone de recherche et inscrites en vertu de la <i>Loi sur les espèces en péril</i> (LEP) ou évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC). <b>Si une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+  knitr::kable(obisTable, align="l", caption=paste(write_caption_blurb(obisFish_rr, "FR"), "Ocean Biodiversity Information System (OBIS) observation records of fish and invertebrate species observed within the search area, and listed by the Species At Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Species designated as “Not at Risk” by SARA or COSEWIC are not included in this search. URLs contain links to a complete dataset description. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area."), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+}
+```
+
+
+#### ***Area-specific GBIF  search results***
+
+```{r gbif-results, cache=FALSE, include=FALSE}
+inaturalist_sf = subset(gbifFish_rr$data_sf, title == "iNaturalist Research-grade Observations")
+inaturalistClipped <- master_intersect(inaturalist_sf, mapDataList)
+inaturalistTable <- create_sar_tables(inaturalistClipped$studyData, listed_species, extraCols = c("URL", "Citation"))$sarData
+
+otherGbif_sf = subset(gbifFish_rr$data_sf, title != "iNaturalist Research-grade Observations")
+gbifClipped <- master_intersect(otherGbif_sf, mapDataList)
+gbifTable <- create_sar_tables(gbifClipped$studyData, listed_species, extraCols = c("URL", "Citation"))$sarData
+
+
+# Add to summary tables!
+
+```
+
+```{r gbif-check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
+reportGbif <-  if (is.null(gbifClipped$studyData)) {
+  "*	There are no relevant records in the Global Biodiversity Information Facility (GBIF) for this search area."
+} else if (is.null(inaturalistClipped$studyData)){
+  "*	There are relevant records in the Global Biodiversity Information Facility (GBIF) for this search area."
+} else {
+  "*	There are relevant records in the Global Biodiversity Information Facility (GBIF) including iNaturalist entries for this search area."  
+}
+writeLines(reportGbif)
+```
+
+```{r gbif-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(gbifFish_rr, "FR"), 'Species designated as “Not at Risk” by SARA or COSEWIC are not included in this search. Observations displayed outside of the search area are visualized for context, but not included in the survey results listed below. The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.')}
+if (!is.null(gbifClipped$studyData)) {
+  plot_rr_sf(areaMap, gbifClipped$mapData, attribute=gbifFish_rr$attribute)
+}
+```
+
+```{r gbif-table, echo=FALSE, results='asis'}
+if (!is.null(gbifClipped$studyData)) {
+  knitr::kable(gbifTable, align="l", caption=paste(write_caption_blurb(gbifFish_rr, "FR"), "Global Biodiversity Information Facility (GBIF) observation records of fish and invertebrate species observed within the search area, and listed by the Species At Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Species designated as “Not at Risk” by SARA or COSEWIC are not included in this search. URLs contain links to a complete dataset description. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. "), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+}
+```
+
+```{r inaturalist-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(gbifFish_rr, "FR"), 'Research-grade iNaturalist observations within the search area (red outline) of fish or invertebrate species that have been added to the Global Biodiversity Information Facility (GBIF). Species included have been listed by the Species at Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Observations displayed outside of the search area are visualized for context, but not included in the survey results listed below. Observations are coloured to show coordinate uncertainties of the data, where observations with coordinate uncertainties >20 km represent locations that have been obscured due to geoprivacy concerns (e.g., hunting). NAs refer to observations with no provided coordinate uncertainty. The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. ')}
+if (!is.null(inaturalistClipped$studyData)) {
+  plot_rr_sf(areaMap, inaturalistClipped$mapData, attribute=gbifFish_rr$attribute)
+}
+```
+
+```{r inaturalist-table, echo=FALSE, results='asis'}
+if (!is.null(inaturalistClipped$studyData)) {
+  knitr::kable(inaturalistTable, align="l", caption=paste(write_caption_blurb(gbifFish_rr, "FR"), "Research-grade iNaturalist observations within the search area (red outline) of fish or invertebrate species that have been added to the Global Biodiversity Information Facility (GBIF). Species included have been listed by the Species at Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Species designated as “Not at Risk” by SARA or COSEWIC are not included in this search. Observations displayed outside of the search area are visualized for context, but not included in the survey results listed below. Observations are coloured to show coordinate uncertainties of the data, where observations with coordinate uncertainties >20 km represent locations that have been obscured due to geoprivacy concerns (e.g., hunting). NAs refer to observations with no provided coordinate uncertainty. The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area."), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 }
 ```
