Turn 'Full report' into a new module
Code has been entirely reviewed and is now simpler. A first .Rmd.origin
file is created with desired sections in code chunks. This file is then
rendered as a .Rmd file in which code has already be run. This file is
then render to get a HTML file which is used as a preview which can then
be print as PDF (see #11). All new sections are integrated (see #5).

--- a/app/templates/FR/context/report_pt6_EBSA.Rmd
+++ b/app/templates/FR/context/report_pt6_EBSA.Rmd
@@ -1,4 +1,4 @@
-# **Search Results for Species at Risk**  
+# **Search Results for Species at Risk** (FR)
 
 ## **Ecologically and Biologically Significant Areas (EBSA)**  
 Contact: <https://open.canada.ca/data/en/dataset/d2d6057f-d7c4-45d9-9fd9-0a58370577e0>  
