--- a/app/templates/FR/species/NSARP_dist_crithab.Rmd
+++ b/app/templates/FR/species/NSARP_dist_crithab.Rmd
@@ -1,4 +1,4 @@
-## **National Aquatic Species at Risk Section**  
+## **National Aquatic Species at Risk Section**  (FR)
 **Contact:** Carolyn Bakelaar  
 **URL:** <http://dfonl7swvgip001.ent.dfo-mpo.ca/Html5Viewer/index.html?viewer=NationalSARMap_EN&LayerTheme=0&locale=en-US#>  
 
