start adding nitrogen load section

--- a/app/data/mybiblio.bib
+++ b/app/data/mybiblio.bib
@@ -125,6 +125,25 @@ year = {2018}
   howpublished = {Retrieved from https://open.canada.ca/data/en/dataset/8ddcaeea-b806-4958-a79f-ba9ab645f53b}
 }
 
+@misc{OpenData_nitroLoad,
+  author = {DFO},
+  title = {Estimates of anthropogenic nitrogen loading and eutrophication indicators for the Bay of Fundy and Scotian Shelf},
+  year = {2021},
+  howpublished = {Retrieved from https://open.canada.ca/data/en/dataset/08746031-1970-4bf6-b6d4-3de2715c8634}
+}
+
+@article{nitroLoad_pub,
+title = {Anthropogenic nitrogen loading and risk of eutrophication in the coastal zone of Atlantic Canada},
+journal = {Estuarine, Coastal and Shelf Science},
+volume = {263},
+pages = {107630},
+year = {2021},
+issn = {0272-7714},
+doi = {https://doi.org/10.1016/j.ecss.2021.107630},
+url = {https://www.sciencedirect.com/science/article/pii/S0272771421004790},
+author = {Noreen E. Kelly and Javier Guijarro-Sabaniel and Rebecca Zimmerman},
+}
+
 @misc{OpenData_nbw_imphabitat,
   author = {DFO In Preparation.},
   title = {Northern Bottlenose Whale Important Habitat [Dataset]},
