add lobster fishing effort section

--- a/app/data/mybiblio.bib
+++ b/app/data/mybiblio.bib
@@ -118,6 +118,14 @@ year = {2018}
   howpublished = {Retrieved from https://open.canada.ca/data/en/dataset/d2d6057f-d7c4-45d9-9fd9-0a58370577e0}
 }
 
+@misc{OpenData_lobsterEffort,
+  author = {DFO},
+  title = {Mapping Inshore Lobster Landings and Fishing Effort on a Maritimes Region Statistical Grid (2012–2014)},
+  year = {2020},
+  howpublished = {Retrieved from https://open.canada.ca/data/en/dataset/64f741d7-1129-49dd-9e5c-2b1de79024f0}
+}
+
+
 @misc{OpenData_MAR_RV,
   author = {DFO},
   title = {Maritimes Research Vessel Surveys [Dataset]},
