add docks section

--- a/app/data/mybiblio.bib
+++ b/app/data/mybiblio.bib
@@ -111,6 +111,13 @@ year = {2018}
   howpublished = {Retrieved from https://open.canada.ca/data/en/dataset/c094782e-0d6f-4cc0-b5a3-58908493a433}
 }
 
+@misc{OpenData_docks,
+  author = {DFO},
+  title = {Man-made solid classification from the Atlantic Shoreline Classification dataset},
+  year = {2017},
+  howpublished = {Retrieved from https://open.canada.ca/data/en/dataset/30449352-2556-42df-9ffe-47ea8e696f91}
+}
+
 @misc{OpenData_ebsa,
   author = {DFO},
   title = {Ecologically and Biologically Significant Areas [Dataset]},
