add disposal site section

--- a/app/data/mybiblio.bib
+++ b/app/data/mybiblio.bib
@@ -194,6 +194,13 @@ author = {Noreen E. Kelly and Javier Guijarro-Sabaniel and Rebecca Zimmerman},
   howpublished = {Retrieved from https://open.canada.ca/data/en/dataset/273df20a-47ae-42c0-bc58-01e451d4897a}
 }
 
+@misc{OpenData_waste,
+  author = {DFO},
+  title = {Active and Inactive Disposal at Sea Sites - 2018},
+  year = {2018},
+  howpublished = {Retrieved from https://open.canada.ca/data/en/dataset/da99526e-284f-4e06-8d04-193785cd1a96}
+}
+
 @techreport{NARWCdatabase,
   author = {Kennedy, R.D.},
   title = {The North Atlantic Right Whale Consortium Database: A Guide for Users and Contributors},
