--- a/sections/nitroLoad/nitroLoad_en.rmd
+++ b/sections/nitroLoad/nitroLoad_en.rmd
@@ -55,7 +55,7 @@ nitroLoadReport <- if (is.null(totalOutputList$studyData) & is.null(deltaOutputL
 writeLines(noquote(nitroLoadReport))
 ```
 
-```{r totalNitroLoad-plot, fig.height=7, fig.width=11, fig.show="hold", out.width="50%", fig.cap=paste(write_caption_blurb(totalNitroLoad_rr, "EN"), 'Map showing Total_Nitrogen_Load,Total Nitrogen load (kg N/yr). Calculated in: [@nitroLoad_pub] ')}
+```{r totalNitroLoad-plot, fig.height=7, fig.width=11, fig.show="hold", out.width="50%", fig.cap=paste(write_caption_blurb(totalNitroLoad_rr, "EN"), 'Map showing Total Nitrogen load (kg N/yr). Calculated in: [@nitroLoad_pub] ')}
 if (!is.null(totalOutputList$studyData)) {
     par(mar = c(4, 4, .1, .1))
     totalRegionMax <- max(totalOutputList$regionData[[totalNitroLoad_rr$attribute]])
