--- a/sections/rockweed/rockweed_en.Rmd
+++ b/sections/rockweed/rockweed_en.Rmd
@@ -1,3 +1,21 @@
+---
+output:
+  bookdown::html_document2:
+    number_sections: FALSE
+    theme: paper
+bibliography: '`r here::here("app/data/mybiblio.bib")`'
+---
+
+```{r child = here::here("sections/commonSections/commonIntro.Rmd")}
+if (FALSE) { 
+  # load in generic data, e.g.functions, study area, and base maps into the 
+  # environment, when knitting, these will be loaded through the child rmd.
+  lapply(list.files(here::here("app/R"), pattern = ".[Rr]$", full.names = TRUE), source)
+  studyArea <- sf::st_read(here::here("app/output/geoms_slc.geojson"))
+  intro_setup(studyArea, env = environment())
+}
+```
+
 ### **Intertidal Vegetation and Rockweed**
 
 Satellite-based Maps of Intertidal Vegetation and Rockweed presence polygons
