add power section

--- a/app/data/mybiblio.bib
+++ b/app/data/mybiblio.bib
@@ -173,6 +173,13 @@ author = {Noreen E. Kelly and Javier Guijarro-Sabaniel and Rebecca Zimmerman},
   howpublished = {Retrieved from https://open.canada.ca/data/en/dataset/2dfa19db-a8cf-4460-97b9-710c2b856276}
 }
 
+@misc{OpenData_power,
+  author = {DFO.},
+  title = {Clean power generating stations by type in megawatts (MW)},
+  year = {2017},
+  howpublished = {Retrieved from https://open.canada.ca/data/en/dataset/65d3db23-b83c-4f49-ab93-65c59ee0e6aa}
+}
+
 @misc{OpenData_SARrange,
   author = {DFO},
   title = {Fisheries and Oceans Canada Species at Risk Distribution (Range) [Dataset]},
