--- a/sections/benthicEffort/benthicEffort_en.Rmd
+++ b/sections/benthicEffort/benthicEffort_en.Rmd
@@ -28,19 +28,33 @@ Dataset description from the Open Data record [@OpenData_benthicEffort]:
 writeLines(noquote(benthicEffort_rr$text$en))
 ```
 
-#### ***Area-specific SAR distribution search results***
+#### ***Area-specific fishing effort search results***
 
 ```{r benthicEffort-results, echo=FALSE, results='asis'}
 outputListBenthicEffort <- master_intersect(benthicEffort_rr$data_sf, mapDataList, getRegion=TRUE)
 
 ```
 
+
+```{r benthicEffort-check, echo=FALSE, results='asis',}
+# Check if there is any data in the study area
+benthicEffortReport <- if (is.null(outputListBenthicEffort$mapData)) {
+  "* There are no relevant records of fishing effort in bethic areas for this search area."
+} else {
+  "* There are relevant records of fishing effort in bethic areas for this search area."
+}
+writeLines(noquote(benthicEffortReport))
+```
 <br>
-```{r benthicEffort-plot, fig.height=7, fig.width=11, fig.show="hold", out.width="50%", fig.cap=paste(write_caption_blurb(benthicEffort_rr, "EN"), 'Maps showing the benthic fishing effort with the search area defined by the user (red outline).')}
-if (!is.null(outputListBenthicEffort$regionData)) {
-  par(mar = c(4, 4, .1, .1))
-  plot(plot_rr_sf(mapDataList$areaMap, outputListBenthicEffort$mapData, bgCutoff=15))
-  plot(plot_rr_sf(mapDataList$regionMap, outputListBenthicEffort$regionData, bgCutoff=15))
+```{r benthicEffort-region-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(benthicEffort_rr, "EN"), 'Maps showing the benthic fishing effort with the search area defined by the user (red outline).')}
+if (!is.null(outputListBenthicEffort$mapData)) {
+  plot_rr_sf(mapDataList$regionMap, outputListBenthicEffort$regionData, bgCutoff=15)
+}
+```
+
+```{r benthicEffort-area-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(benthicEffort_rr, "EN"), 'Maps showing the benthic fishing effort with the search area defined by the user (red outline).')}
+if (!is.null(outputListBenthicEffort$mapData)) {
+  plot_rr_sf(mapDataList$areaMap, outputListBenthicEffort$mapData, bgCutoff=15)
 }
 ```
 
