--- a/sections/lobsterEffort/lobsterEffort_en.rmd
+++ b/sections/lobsterEffort/lobsterEffort_en.rmd
@@ -30,7 +30,7 @@ write_meta(lobsterEffort_rr, "EN")
 ```
 
 Dataset description from the Open Data record [@OpenData_lobsterEffort]:
-```{r nitroLoad-text, results='asis'}
+```{r lobsterEffort-text, results='asis'}
 writeLines(noquote(lobsterEffort_rr$text$en))
 
 ```
@@ -53,21 +53,23 @@ lobsterEffortReport <- if (is.null(lobsterOutputList$studyData)) {
 writeLines(noquote(lobsterEffortReport))
 ```
 
-```{r lobsterEffort-plot, fig.height=7, fig.width=11, fig.show="hold", out.width="50%", fig.cap=paste(write_caption_blurb(lobsterEffort_rr, "EN"), 'Map showing the search area defined by the user (red outline) used to query lobster fishing effort records at a regional and local scale.')}
+```{r lobsterEffort-region-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(lobsterEffort_rr, "EN"), 'Map showing the search area defined by the user (red outline) used to query lobster fishing effort records.')}
 if (!is.null(lobsterOutputList$studyData)) {
-    par(mar = c(4, 4, .1, .1))
-    totalRegionMax <- max(lobsterOutputList$regionData[[lobsterEffort_rr$attribute]])
-    totalRegionMin <- min(lobsterOutputList$regionData[[lobsterEffort_rr$attribute]])
     plot(plot_rr_sf(regionMap, lobsterOutputList$regionData, 
                     attribute=lobsterEffort_rr$attribute, 
                     legendName="Catch weight (kg/yr)", 
-                    continuousAttr=TRUE))
+                    continuousAttr=TRUE))}
+```
+
+```{r lobsterEffort-area-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(lobsterEffort_rr, "EN"), 'Map showing the search area defined by the user (red outline) used to query lobster fishing effort records.')}
+if (!is.null(lobsterOutputList$studyData)) {
+    totalRegionMax <- max(lobsterOutputList$regionData[[lobsterEffort_rr$attribute]])
+    totalRegionMin <- min(lobsterOutputList$regionData[[lobsterEffort_rr$attribute]])
     plot(plot_rr_sf(areaMap, lobsterOutputList$mapData, 
                     attribute=lobsterEffort_rr$attribute, 
                     legendName="Catch weight (kg/yr)", 
                     continuousAttr=TRUE, 
-                    minScale=totalRegionMin, maxScale=totalRegionMax))
- 
-}
+                    minScale=totalRegionMin, maxScale=totalRegionMax))}
 ```
+
 
